add breakline before pronouns link

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -41,7 +41,7 @@
             <br>
             <p>
                 kevin.<br>
-                he/they/she.
+                he/they/she.<br>
                 <a href="https://en.pronouns.page/@brugr" class="link">
                     (<span class="fas fa-tags"></span> pronouns)
                 </a><br>
