switch fonts to bitter and switch link order

--- a/site/links/index.html
+++ b/site/links/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>brugr</title>
     
-    <meta name="title" content="brugr.">
+    <meta name="title" content="brugr.">p
     <meta name="author" content="burgr">
     <meta name="description" content="brugr.">
 
@@ -41,12 +41,12 @@
                 <span class="fab fa-twitter fa-fw"></span> twitter.
             </a>
             <br>
-            <a>
-                <span class="fab fa-discord fa-fw"></span> brugr#0001.
-            </a>
-            <br>
             <a href="https://www.instagram.com/brugrinsta" class="link">
                 <span class="fab fa-instagram fa-fw"></span> instagram.
+            </a>
+            <br>
+            <a>
+                <span class="fab fa-discord fa-fw"></span> brugr#0001.
             </a>
             <br>
             <a href="https://open.spotify.com/user/sodakevin" class="link">
