--- a/site/about/index.html
+++ b/site/about/index.html
@@ -38,7 +38,7 @@
                 kevin.<br>
                 they/he/she.<br>
                 <a href="https://en.pronouns.page/@brugr" class="link">
-                    (<span class="fas fa-tags"></span> pronouns)
+                    (<span class="fas fa-tags"></span> pronouns.page)
                 </a><br>
                 20.<br>
                 swedish.<br>
