--- a/site/links/index.html
+++ b/site/links/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style.css">
     <title>brugr</title>
     
-    <meta name="title" content="brugr.">p
+    <meta name="title" content="brugr.">
     <meta name="author" content="burgr">
     <meta name="description" content="brugr.">
 
@@ -40,12 +40,8 @@
                 <span class="fab fa-instagram fa-fw"></span> instagram.
             </a>
             <br>
-            <a>
+            <a href="https://discord.com/users/164391222364995584" class="link">
                 <span class="fab fa-discord fa-fw"></span> brugr#0001.
-            </a>
-            <br>
-            <a href="https://open.spotify.com/user/sodakevin" class="link">
-                <span class="fab fa-spotify fa-fw"></span> spotify.
             </a>
             <br>
             <a href="https://vrchat.com/home/user/usr_4347ceea-e2e4-497f-8448-fcedf7fcccd0" class="link">
@@ -67,8 +63,6 @@
             <a href="https://www.github.com/brugr" class="link">
                 <span class="fab fa-github fa-fw"></span> github.
             </a>
-            <br>
-
         </div>
     </div>
 </body>
