small changes to about page

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -36,14 +36,13 @@
             <br>
             <p>
                 kevin.<br>
-                they/he/she.<br>
+                they/he.<br>
                 <a href="https://en.pronouns.page/@brugr" class="link">
                     (<span class="fas fa-tags"></span> pronouns.page)
                 </a><br>
                 20.<br>
                 swedish.<br>
                 tech nerd.<br>
-                vr raver.<br>
                 introvert.<br>
                 pansexual.<br>
                 <span class="fas fa-heart"></span> johmo.
