--- a/site/links/index.html
+++ b/site/links/index.html
@@ -36,6 +36,10 @@
                 <span class="fab fa-twitter fa-fw"></span> twitter
             </a>
             <br>
+            <a rel="me" href="https://layer8.space/@brugr" class="link">
+                <span class="fab fa-mastodon fa-fw"></span> mastodon
+            </a>
+            <br>
             <a href="https://www.instagram.com/brugrinsta" class="link">
                 <span class="fab fa-instagram fa-fw"></span> instagram
             </a>
