--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>brugr</title>
     
     <meta name="title" content="brugr">
@@ -24,40 +24,40 @@
 </head>
 <body>
     <div class="header">
-        <h1>links</h1>
+        <h1>brugr</h1>
     </div>
     <div class="links">
         <div>
-            <a href="javascript:if(document.referrer==''){window.location.href='../'}else{history.back()}" class="link">
-                <span class="fas fa-chevron-left"></span> back
-            </a>
-            <br class="space">
             <a rel="me" href="https://layer8.space/@brugr" class="link">
-                <span class="fab fa-mastodon fa-fw"></span> mastodon
+                <span class="fa-brands fa-mastodon fa-fw"></span> mastodon
             </a>
             <br>
             <a href="https://www.instagram.com/brugrinsta" class="link">
-                <span class="fab fa-instagram fa-fw"></span> instagram
+                <span class="fa-brands fa-instagram fa-fw"></span> instagram
             </a>
             <br>
             <a href="https://discord.com/users/164391222364995584" class="link">
-                <span class="fab fa-discord fa-fw"></span> brugr#0001
+                <span class="fa-brands fa-discord fa-fw"></span> brugr#0001
             </a>
             <br>
-            <a href="https://myanimelist.net/profile/brugr" class="link">
-                <span class="fas fa-list-ol fa-fw"></span> myanimelist
+            <a href="https://vrchat.com/home/user/usr_4347ceea-e2e4-497f-8448-fcedf7fcccd0" class="link">
+                <span class="fa-solid fa-message fa-fw"></span> vrchat
             </a>
             <br>
-            <a href="https://github.com/brugr/brugr/blob/master/PC-SPECS.md#brugrs-pc-specifications" class="link">
-                <span class="fas fa-desktop fa-fw"></span> pc specs
+            <a href="https://open.spotify.com/user/sodakevin" class="link">
+                <span class="fa-brands fa-spotify fa-fw"></span> spotify
             </a>
             <br>
             <a href="https://www.github.com/brugr" class="link">
-                <span class="fab fa-github fa-fw"></span> github
+                <span class="fa-brands fa-github fa-fw"></span> github
             </a>
             <br>
-            <a href="https://keybase.io/brugr" class="link">
-                <span class="fab fa-keybase fa-fw"></span> keybase
+            <a href="https://myanimelist.net/profile/brugr" class="link">
+                <span class="fa-solid fa-list-ol fa-fw"></span> myanimelist
+            </a>
+            <br>
+            <a href="https://gist.github.com/brugr/3842de93ceec5541814538b3c629640a" class="link">
+                <span class="fa-solid fa-desktop fa-fw"></span> pc specs
             </a>
         </div>
     </div>
