disable dark reader auto darken
website is already dark so :P

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="author" content="burgr">
     <meta name="description" content="brugr">
 
+    <meta name="darkreader-lock">
+
     <!-- OpenGraph -->
     <meta property="og:title" content="brugr">
     <meta property="og:type" content="website">
