add links, name and pronouns

--- a/index.html
+++ b/index.html
@@ -27,13 +27,10 @@
 <body>
     <div class="header">
         <h1>brugr</h1>
+        <h2>kevin | he/they</h2>
     </div>
     <div class="links">
         <div>
-            <a rel="me" href="https://layer8.space/@brugr" class="link">
-                <span class="fa-brands fa-mastodon fa-fw"></span> mastodon
-            </a>
-            <br>
             <a href="https://www.instagram.com/brugrinsta" class="link">
                 <span class="fa-brands fa-instagram fa-fw"></span> instagram
             </a>
@@ -44,6 +41,14 @@
             <br>
             <a href="https://vrchat.com/home/user/usr_4347ceea-e2e4-497f-8448-fcedf7fcccd0" class="link">
                 <span class="fa-solid fa-message fa-fw"></span> vrchat
+            </a>
+            <br>
+            <a href="https://vrclist.com/user/brugr/playlists" class="link">
+                <span class="fa-solid fa-globe fa-fw"></span> vrclist
+            </a>
+            <br>
+            <a href="https://steamcommunity.com/id/brugr/" class="link">
+                <span class="fa-brands fa-steam fa-fw"></span> steam
             </a>
             <br>
             <a href="https://open.spotify.com/user/sodakevin" class="link">
@@ -58,7 +63,7 @@
                 <span class="fa-solid fa-list-ol fa-fw"></span> myanimelist
             </a>
             <br>
-            <a href="https://gist.github.com/brugr/3842de93ceec5541814538b3c629640a" class="link">
+            <a href="https://gist.github.com/brugr/3842de93ceec5541814538b3c629640a#file-pc-specs-md" class="link">
                 <span class="fa-solid fa-desktop fa-fw"></span> pc specs
             </a>
         </div>
