--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
             <br>
             <a href="https://discord.com/users/164391222364995584" class="link">
-                <span class="fa-brands fa-discord fa-fw"></span> brugr#0001
+                <span class="fa-brands fa-discord fa-fw"></span> brugr
             </a>
             <br>
             <a href="https://vrchat.com/home/user/usr_4347ceea-e2e4-497f-8448-fcedf7fcccd0" class="link">
