add bluesky link and change discord link title

--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
                 <span class="fa-brands fa-instagram fa-fw"></span> instagram
             </a>
             <br>
+            <a href="https://bsky.app/profile/brugr.com" class="link">
+                <span class="fa-brands fa-bluesky fa-fw"></span> bluesky
+            </a>
+            <br>
             <a href="https://discord.com/users/164391222364995584" class="link">
-                <span class="fa-brands fa-discord fa-fw"></span> brugr
+                <span class="fa-brands fa-discord fa-fw"></span> discord
             </a>
             <br>
             <a href="https://vrchat.com/home/user/usr_4347ceea-e2e4-497f-8448-fcedf7fcccd0" class="link">
