--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
                 <span class="fa-brands fa-github fa-fw"></span> github
             </a>
             <br>
+            <a href="https://www.backloggd.com/u/brugr/" class="link">
+                <span class="fa-solid fa-gamepad fa-fw"></span> backloggd
+            </a>
+            <br>
             <a href="https://myanimelist.net/profile/brugr" class="link">
                 <span class="fa-solid fa-list-ol fa-fw"></span> myanimelist
             </a>
