--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <a href="https://bsky.app/profile/brugr.com" class="link">
                 <span class="fa-brands fa-bluesky fa-fw"></span> bluesky
             </a>
+            <a href="https://www.instagram.com/brugrinsta" class="link">
+                <span class="fa-brands fa-instagram fa-fw"></span> instagram
+            </a>
             <a href="https://discord.com/users/164391222364995584" class="link">
                 <span class="fa-brands fa-discord fa-fw"></span> discord
             </a>
@@ -45,17 +48,23 @@
             <a href="https://steamcommunity.com/id/brugr/" class="link">
                 <span class="fa-brands fa-steam fa-fw"></span> steam
             </a>
+            <a href="https://www.last.fm/user/brugr" class="link">
+                <span class="fa-brands fa-lastfm fa-fw"></span> last.fm
+            </a>
             <a href="https://open.spotify.com/user/sodakevin" class="link">
                 <span class="fa-brands fa-spotify fa-fw"></span> spotify
-            </a>
-            <a href="https://www.github.com/brugr" class="link">
-                <span class="fa-brands fa-github fa-fw"></span> github
             </a>
             <a href="https://www.backloggd.com/u/brugr/" class="link">
                 <span class="fa-solid fa-gamepad fa-fw"></span> backloggd
             </a>
             <a href="https://myanimelist.net/profile/brugr" class="link">
                 <span class="fa-solid fa-list-ol fa-fw"></span> myanimelist
+            </a>
+            <a href="https://letterboxd.com/brugr" class="link">
+                <span class="fa-brands fa-letterboxd fa-fw"></span> letterboxd
+            </a>
+            <a href="https://www.github.com/brugr" class="link">
+                <span class="fa-brands fa-github fa-fw"></span> github
             </a>
             <a href="https://gist.github.com/brugr/3842de93ceec5541814538b3c629640a#file-pc-specs-md" class="link">
                 <span class="fa-solid fa-desktop fa-fw"></span> pc specs
